--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,43 +1,26 @@
-<!-- <mat-card class="example-card" *ngFor="let schedule of scheduleArray">
-  <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Shiba Inu</mat-card-title>
-    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-  <mat-card-content>
-    <p>
-      The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-      A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-      bred for hunting.
-    </p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
-  </mat-card-actions>
-</mat-card> -->
 <div class="container-fluid" *ngIf="scheduleArray">
-  <div class="row">
-
-    <div class="col-md-4" *ngFor="let schedule of scheduleArray">
-        <div class="card text-center">
-            <div class="card-header card-header-rose">
-                <h4 class="card-title">{{schedule.speaker.topic}}</h4>
-                <!-- <p class="category">Category subtitle</p> -->
-            </div>
-            <div class="card-body">
-                <div class="avatar">
-                    <img src="../../assets/img/faces/marc.jpg" alt="Circle Image" class="img-raised rounded-circle img-fluid">
-                </div>
-                <h5><strong>{{schedule.speaker.name}}</strong></h5>
-                <hr/>                 
-                <p>Room - {{schedule.room.name}} <i style="cursor: pointer; color: green;" class="material-icons pt-2" data-toggle="tooltip" data-placement="top" title="{{schedule.room.info}}">info</i></p> 
-                <p>Presentation URL - <a target=_block href="{{schedule.speaker.presentation_url}}">{{schedule.speaker.presentation_url}}</a></p>
-                <p>Video URL - <a target=_block href="{{schedule.speaker.video_url}}">{{schedule.speaker.video_url}}</a></p>
-            </div>
+  <div class="row" style="padding-left: 8px;padding-right: 8px;">
+    <div class="col-md-4 col-lg-3 col-12" style="margin:0px;padding: 4px !important;" *ngFor="let schedule of scheduleArray">
+      <mat-card class="mat-elevation-z8" style="background: white;">
+        <div class="d-flex flex-row">
+          <img src="../../assets/img/faces/marc.jpg" alt="Circle Image" class="rounded-circle img-fluid" style="width: 64px; height: 64px;" >
+          <div style="margin-left: 20px;">
+          <h4 style="padding-bottom: 0px;margin-bottom: 0px;">{{schedule.speaker.name}}</h4>
+          <h6 style="margin-top:0px;color: #686868;font-weight: 100;text-transform: none;">{{schedule.speaker.position}} | {{schedule.speaker.company}}</h6>
         </div>
+        </div>
+        <h5 style="min-height: 60px;">{{schedule.speaker.topic}}</h5>
+        <div class="d-flex flex-row"
+       >
+        <mat-icon style="width: 24px;height: 24px;">room</mat-icon>
+         <span style="padding-left: 10px;margin-top: 0px;font-size: 1em;"
+       
+        > {{schedule.room.name}}
+      </span>
+      <mat-icon  matTooltip="{{schedule.room.info}}"
+      matTooltipPosition="right" style="color:#68686863;margin-left:5px;font-size:15px;margin-top: 4.8px;">info</mat-icon>
+      </div>
+      </mat-card>
     </div>
-
   </div>
 </div>
