--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,7 +1,9 @@
 <div class="container-fluid" *ngIf="scheduleArray">
   <div class="row" style="padding-left: 8px;padding-right: 8px;">
-    <div class="col-md-4 col-lg-3 col-12" style="margin:0px;padding: 4px !important;" *ngFor="let schedule of scheduleArray">
-      <mat-card class="mat-elevation-z8" style="background: white;">
+    <div class="col-md-4 col-lg-3 col-12" style="margin:0px;padding: 4px !important;" *ngFor="let schedule of scheduleArray;">
+      
+      <mat-card  [class.mat-elevation-z2]="focusedSchedule != schedule" (mouseover)="focusedSchedule = schedule" [class.mat-elevation-z16]="focusedSchedule == schedule" style="background: white;">
+
         <div class="d-flex flex-row">
           <img src="../../assets/img/faces/marc.jpg" alt="Circle Image" class="rounded-circle img-fluid" style="width: 64px; height: 64px;" >
           <div style="margin-left: 20px;">
